<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_profile"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_sale"
        android:icon="@drawable/ic_add_sale"
        android:title="@string/add_sale"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_supplier"
        android:icon="@drawable/ic_supplier"
        android:title="@string/supplier"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_product"
        android:icon="@drawable/ic_add_product"
        android:title="@string/add_product"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications"
        app:showAsAction="always" />
</menu>