<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_imgview_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/login_edttxt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_secondary"
        android:ems="15"
        android:hint="@string/user_emailadress"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_imgview_logo" />

    <EditText
        android:id="@+id/login_edttxt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="15"
        android:background="@drawable/background_secondary"
        android:inputType="textPassword"
        android:hint="@string/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edttxt_email" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edttxt_password" />

    <TextView
        android:id="@+id/login_txtView_otherlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/user_otther_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

    <ImageButton
        android:id="@+id/login_imgbtn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txtView_otherlogin"
        app:srcCompat="@drawable/ic_facebook"
        app:tint="@color/orange" />

    <ImageButton
        android:id="@+id/login_imgbtn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/login_imgbtn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/login_txtView_otherlogin"
        app:srcCompat="@drawable/ic_google"
        app:tint="@color/orange"/>

    <ImageButton
        android:id="@+id/login_imgbtn_microsoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/login_imgbtn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/login_txtView_otherlogin"
        app:srcCompat="@drawable/ic_microsoft"
        app:tint="@color/orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>